# Cpp_Cherno

./: .gitingore  CMakeLists.txt  README.md  temp
src/: Log.cpp  main.cpp
